Fixing issue with scrollbar coming up for 0 elements in carousel

--- a/app/assets/stylesheets/users/dashboard.css
+++ b/app/assets/stylesheets/users/dashboard.css
@@ -37,7 +37,7 @@
 ul.requestList {
   height: 170px;
   margin: 10px 0 0px 35px;
-  width: 100%;
+  width: 95%;
   list-style: none;
   position: relative;
 }
